crates/compiler/test_syntax/tests/snapshots/pass/annotated_tag_destructure.expr.migrated.roc
UserId(x): [UserId(I64)]
UserId(x) = UserId(42)

x
