crates/compiler/test_syntax/tests/snapshots/fail/newline_before_operator_with_defs.expr.formatted.roc
7
== (
    Q : c
    42
)